fix(Button): make light button readable

--- a/src/styles/variables/buttons.scss
+++ b/src/styles/variables/buttons.scss
@@ -19,7 +19,6 @@
   --button-size-lg-padding-vertical: var(--size-spacing-md);
   --button-size-lg-padding-horizontal: var(--size-spacing-lg);
 
-
   /* PRIMARY */
   --button-background-color-primary: var(--color-brand-primary-base);
   --button-font-color-primary: var(--color-brand-white-base);
@@ -63,7 +62,7 @@
 
   --button-border-color-light-outline: var(--color-brand-light-base);
   --button-background-color-light-outline: transparent;
-  --button-font-color-light-outline: var(--color-brand-light-base);
+  --button-font-color-light-outline: var(--color-brand-dark-base);
   --button-border-hover-color-light-outline: var(--color-brand-light-base);
   --button-background-hover-color-light-outline: var(--color-brand-light-base);
   --button-font-hover-color-light-outline: var(--color-brand-dark-base);
